--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_core: ^3.7.0
   flutter_dotenv: ^5.0.2
   firebase_auth: ^5.3.2
+  cloud_firestore: ^5.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
