--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   firebase_auth: ^5.3.2
   cloud_firestore: ^5.0.1
+  intl: ^0.18.0
 
 
   # The following adds the Cupertino Icons font to your application.
