--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   firebase_auth: ^5.3.2
   cloud_firestore: ^5.0.1
   intl: ^0.18.0
+  syncfusion_flutter_charts: ^21.1.3
+  percent_indicator: ^4.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
